--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,15 @@
-@media screen and (min-width: 900px) {
+@media screen and (max-width: 768px) {
+        .resume{
+            width: 500px;
+            height: 700px;
+        }
+        .media-s{
+        width: 500px;
+        height: 420px;
+    }
 
+        .codexample {
+             width: 470px;
+             height: 400px;
+        }
 }
